--- a/Scripts.ipynb
+++ b/Scripts.ipynb
@@ -448,11 +448,171 @@
     "summary_df = summarize_data(final_metrics_df, metrics_columns)\n",
     "print(summary_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(final_metrics)\n",
+    "df_filtered = df[(df['avg_cbo'] != -1) & (df['avg_dit'] != -1) & (df['avg_lcom'] != -1)]\n",
+    "correlation = df_filtered[['popularity', 'avg_cbo', 'avg_dit', 'avg_lcom']].corr()\n",
+    "\n",
+    "print(\"Matriz de Correlação:\")\n",
+    "print(correlation)\n",
+    "\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "\n",
+    "# Gráfico de dispersão para CBO\n",
+    "plt.subplot(2, 2, 1)\n",
+    "plt.scatter(df_filtered['popularity'], df_filtered['avg_cbo'], alpha=0.5)\n",
+    "plt.title('Popularity vs. Avg CBO')\n",
+    "plt.xlabel('Popularity')\n",
+    "plt.ylabel('Avg CBO')\n",
+    "\n",
+    "# Gráfico de dispersão para DIT\n",
+    "plt.subplot(2, 2, 2)\n",
+    "plt.scatter(df_filtered['popularity'], df_filtered['avg_dit'], alpha=0.5)\n",
+    "plt.title('Popularity vs. Avg DIT')\n",
+    "plt.xlabel('Popularity')\n",
+    "plt.ylabel('Avg DIT')\n",
+    "\n",
+    "# Gráfico de dispersão para LCOM\n",
+    "plt.subplot(2, 2, 3)\n",
+    "plt.scatter(df_filtered['popularity'], df_filtered['avg_lcom'], alpha=0.5)\n",
+    "plt.title('Popularity vs. Avg LCOM')\n",
+    "plt.xlabel('Popularity')\n",
+    "plt.ylabel('Avg LCOM')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(final_metrics)\n",
+    "df_filtered = df[(df['avg_cbo'] != -1) & (df['avg_dit'] != -1) & (df['avg_lcom'] != -1)]\n",
+    "correlation = df_filtered[['maturity', 'avg_cbo', 'avg_dit', 'avg_lcom']].corr()\n",
+    "\n",
+    "print(\"Matriz de Correlação:\")\n",
+    "print(correlation)\n",
+    "\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "\n",
+    "# Gráfico de dispersão para CBO\n",
+    "plt.subplot(2, 2, 1)\n",
+    "plt.scatter(df_filtered['maturity'], df_filtered['avg_cbo'], alpha=0.5)\n",
+    "plt.title('Maturity vs. Avg CBO')\n",
+    "plt.xlabel('Maturity')\n",
+    "plt.ylabel('Avg CBO')\n",
+    "\n",
+    "# Gráfico de dispersão para DIT\n",
+    "plt.subplot(2, 2, 2)\n",
+    "plt.scatter(df_filtered['maturity'], df_filtered['avg_dit'], alpha=0.5)\n",
+    "plt.title('Maturity vs. Avg DIT')\n",
+    "plt.xlabel('Maturity')\n",
+    "plt.ylabel('Avg DIT')\n",
+    "\n",
+    "# Gráfico de dispersão para LCOM\n",
+    "plt.subplot(2, 2, 3)\n",
+    "plt.scatter(df_filtered['maturity'], df_filtered['avg_lcom'], alpha=0.5)\n",
+    "plt.title('Maturity vs. Avg LCOM')\n",
+    "plt.xlabel('Maturity')\n",
+    "plt.ylabel('Avg LCOM')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(final_metrics)\n",
+    "df_filtered = df[(df['avg_cbo'] != -1) & (df['avg_dit'] != -1) & (df['avg_lcom'] != -1)]\n",
+    "correlation = df_filtered[['activity', 'avg_cbo', 'avg_dit', 'avg_lcom']].corr()\n",
+    "\n",
+    "print(\"Matriz de Correlação:\")\n",
+    "print(correlation)\n",
+    "\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "\n",
+    "# Gráfico de dispersão para CBO\n",
+    "plt.subplot(2, 2, 1)\n",
+    "plt.scatter(df_filtered['activity'], df_filtered['avg_cbo'], alpha=0.5)\n",
+    "plt.title('Activity vs. Avg CBO')\n",
+    "plt.xlabel('Activity')\n",
+    "plt.ylabel('Avg CBO')\n",
+    "\n",
+    "# Gráfico de dispersão para DIT\n",
+    "plt.subplot(2, 2, 2)\n",
+    "plt.scatter(df_filtered['activity'], df_filtered['avg_dit'], alpha=0.5)\n",
+    "plt.title('Activity vs. Avg DIT')\n",
+    "plt.xlabel('Activity')\n",
+    "plt.ylabel('Avg DIT')\n",
+    "\n",
+    "# Gráfico de dispersão para LCOM\n",
+    "plt.subplot(2, 2, 3)\n",
+    "plt.scatter(df_filtered['activity'], df_filtered['avg_lcom'], alpha=0.5)\n",
+    "plt.title('Activity vs. Avg LCOM')\n",
+    "plt.xlabel('Activity')\n",
+    "plt.ylabel('Avg LCOM')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(final_metrics)\n",
+    "df_filtered = df[(df['avg_cbo'] != -1) & (df['avg_dit'] != -1) & (df['avg_lcom'] != -1)]\n",
+    "correlation = df_filtered[['loc_total', 'avg_cbo', 'avg_dit', 'avg_lcom']].corr()\n",
+    "\n",
+    "print(\"Matriz de Correlação:\")\n",
+    "print(correlation)\n",
+    "\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "\n",
+    "# Gráfico de dispersão para CBO\n",
+    "plt.subplot(2, 2, 1)\n",
+    "plt.scatter(df_filtered['loc_total'], df_filtered['avg_cbo'], alpha=0.5)\n",
+    "plt.title('LOC Total vs. Avg CBO')\n",
+    "plt.xlabel('LOC Total')\n",
+    "plt.ylabel('Avg CBO')\n",
+    "\n",
+    "# Gráfico de dispersão para DIT\n",
+    "plt.subplot(2, 2, 2)\n",
+    "plt.scatter(df_filtered['loc_total'], df_filtered['avg_dit'], alpha=0.5)\n",
+    "plt.title('LOC Total vs. Avg DIT')\n",
+    "plt.xlabel('LOC Total')\n",
+    "plt.ylabel('Avg DIT')\n",
+    "\n",
+    "# Gráfico de dispersão para LCOM\n",
+    "plt.subplot(2, 2, 3)\n",
+    "plt.scatter(df_filtered['loc_total'], df_filtered['avg_lcom'], alpha=0.5)\n",
+    "plt.title('LOC Total vs. Avg LCOM')\n",
+    "plt.xlabel('LOC Total')\n",
+    "plt.ylabel('Avg LCOM')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -466,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
